tests/feature_tests/snapshots/e2e__feature_tests__list_local_with_nothing_installed__Bash.snap
---
source: tests/feature_tests/mod.rs
expression: "&source.trim()"
---
set -e
shopt -s expand_aliases

eval "$(fnm env)"
fnm ls
