tests/feature_tests/snapshots/e2e__feature_tests__list_local_with_nothing_installed__PowerShell.snap
---
source: tests/feature_tests/mod.rs
expression: "&source.trim()"
---
$ErrorActionPreference = "Stop"
fnm env | Out-String | Invoke-Expression
fnm ls
