tests/feature_tests/snapshots/e2e__feature_tests__list_local_with_nothing_installed__WinCmd.snap
---
source: tests/feature_tests/mod.rs
expression: "&source.trim()"
---
FOR /f "tokens=*" %i IN ('fnm env') DO CALL %i
fnm ls
